# ChangeLog for dev-java/avalon-logkit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 May 2007; Alistair John Bush <ali_bush@gentoo.org> ChangeLog:
  Drop all keywords on experimental avalon-logkit
