@@ -1,3 +1,4 @@
 DIST logkit-1.2.2-src.tar.gz 113180 RMD160 484c0860154f306d9773fba6a21c7d565d443d73 SHA1 45135c2f8345fb32fde0534e7bddcdeae0d3c435 SHA256 2c81edc87571fbd05797da7f65515e089c62cbb735bdbd10f93e29bd3aa3ddb8
-EBUILD avalon-logkit-1.2.2.ebuild 1699 RMD160 25be8d865dcb19b464b1c0ca3ff078d85353e22e SHA1 422db564d164ee03ebc1073a9d33dd2920175462 SHA256 52e89df06840e0f00b96023ee995883396ced0c4263dcabdf2dcb21289b6eae9
+EBUILD avalon-logkit-1.2.2.ebuild 2562 RMD160 62aacacaeb140ef05c531bded743f5a6e2b848a9 SHA1 a7be7c28ccd7dd7df9e78263cfbb1a1d8cd10954 SHA256 6bbb946133a5355207b3f001738ea1f1272313b2af12cc09ce8798c0095f2894
+MISC ChangeLog 359 RMD160 17d10956622b04bfd07f046132a4caa0b8a82fff SHA1 a671509523e0aa10f514e3d75ebb0ffeb1d14695 SHA256 1789f5e2a0c4a37b6e8c52e95b026f05a6e2e8f5d8ebe7fd6ddcc0a067160ea8
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
