@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/avalon-logkit
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  08 Mar 2008; Alistair Bush <ali_bush@gentoo.org>
+  avalon-logkit-1.2.2.ebuild:
+  Fix src_compile(), Add src_test()
 
   03 May 2007; Alistair John Bush <ali_bush@gentoo.org> ChangeLog:
   Drop all keywords on experimental avalon-logkit
